[package]
name = "data-analyzer-ta"
version = "0.1.0"
edition = "2021"

[dependencies]
ta = "0.5.0"  # replace with the actual version you're using
csv = "1.1"  # replace with the actual version you're using
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.0" # Add plotters dependency
plotters-backend = "0.3.1"
chrono = "0.4"

