[package]
name = "data-analyzer-ta"
version = "0.1.0"
edition = "2021"

[dependencies]
ta = "0.5.0"  # replace with the actual version you're using
csv = "1.1"  # replace with the actual version you're using
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.0" # Add plotters dependency
plotters-backend = "0.3.1"
csv-async = "1.3"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
futures = "0.3"
csv-txt-excel-parallel-toolkit = "0.4.7"
anyhow = "1.0"
rayon = "1.5.1"

